--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
             </div>
         </section>
         <section class="section" id="headerSection2">
-            <div class="contanier mb-5">
+            <div class="container mb-5">
                 <div class="row">
                     <div class="col-lg-4">
                         <a href="index.html" class="heading">CJpage</a>
@@ -159,26 +159,26 @@
         <section class="section" id="Section1">
             <div class="container mb-5">
                 <div class="row">
-                    <h2 class=" ab-text main-heading text-center">About Me</h2>
+                    <h2 class=" ab-text main-heading text-center mb-5">About Me</h2>
                     <div class="col-md-5">
-                        <img src="images/IMG_2689.jpg"alt="placeholder img" class="img-fluid image w-100" />
+                        <img src="images/AN3A2957.jpeg"alt="placeholder img" class="img-fluid image w-100" />
                     </div>
                     <div class="col-md-6 d-flex align-items-center">
-                        <p>My name is clint jackson I was born March 10, 2000.I'm also biracial with my father being african american and my mother caucasian and native american.I'm the oldest out of two of my brothers where we where all raise in jackson Mississippi.During the time living in Jackson I went to school and played american football for my schools.I graulet high school at Callaway High School in 2019.Some of my hobbys that I love doing is playing video games,watching tvshows,playing my favorite sports, laying down and reading </p>
+                        <p>My name is Clint Jackson. I was born on March 10, 2000. I am bi-racial with my father being african american and my mother caucasian and native american. I'm the first born out of my parent's three sons. I was raise in Jackson, MS. While attending public school in Jackson, I played american football for my middle and high schools. I graduated from Callaway High School in 2019. Some of my hobbies that I love doing is playing video games, watching TV shows, playing my favorite sports, and reading a good book every now and then. </p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <footer class="footer" id="footer">
-        <section class="section" id="footerSection1">
+        <section class="section" id="abtfooterSection1">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <h2 class="footer-heading text-light">contacts</h2>
                     <ul class=" myContacts list-unstyled">
                         <li>
-                            <a href="tel:6019187211" class="footer-link text-light">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
+                            <a href="tel:6019187211" class="footer-link text-light">Call me</a>
                         </li>
                         <li>
                             <a href="mailto:clintjackson601@gmail.com"class="footer-link text-light">Email: clintjackson601@gmail.com</a>
