--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="section" id="headerSection1">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 d-block d-md-none">
+                    <div class="col-lg-8">
                         <!-- <a class="btn"
                         data-bs-toggle="offcanvas" 
                         href="#offCanvas" 
@@ -128,6 +128,7 @@
             </div>
         </div>
     </section>
+    <!-- Social Links -->
     <section class="section" id="headerSection3">
         <div class="container">
                 <nav class="nav justify-content-center justify-content-md-end">
@@ -155,18 +156,21 @@
             </div>
         </section>
     </header>
+    <!-- A little about Me -->
     <main class="main">
         <section class="section" id="Section1">
             <div class="container mb-5">
                 <div class="row">
                     <div class="col-md-5">
-                        <img src="images/IMG_2689.jpg"alt="placeholder img" class="img-fluid image w-100" />
+                        <img src="images/AN3A2894.jpeg"alt="placeholder img" class="img-fluid image w-100" />
                     </div>
                     <div class="col-md-6 d-flex align-items-center">
-                        <p class="img-text">Hey welcome to my web page my name is clint Jackson and i'm current junior developer at mississippi coding academy and this is going to be my first web page that I do on my own so this page will be a working project which mean it not going to look the best but I will be making changes and imporve this page as I grow as a junior developer.So far what I learn at the coding academy is <span class="learn">HTML5 CSS BOOTSTRAP</span>.On this page your going to learn little about me some of my work I have done at ms coding academy hope yall yall like my hope</p>
+                        <p class="img-text">Hello. Welcome to my web page. My name is Clint Jackson. I am currently a junior developer at 
+                            Mississippi Coding Academy and this is my very first web page that I am developing. This page will be a work in progress which means it may not look the best now, but I will be making changes and improvements while I grow as a junior developer. So far, what I have learned from the coding academy is <span class="learn">HTML5 CSS BOOTSTRAP</span>. On this page you are going to learn a little about me and some of my work that I have done while learning at Mississippi Coding Academy. I really hope y'all enjoy my page.</p>
                     </div>
                 </div>
             </div>
+            <!-- links -->
         </section>
         <section class="section" id="Section2">
             <div class="container mb-5">
@@ -200,6 +204,7 @@
             </div>
         </section>
     </main>
+    <!-- contacts -->
     <footer class="footer" id="footer">
         <section class="section" id="footerSection1">
             <div class="container">
@@ -208,7 +213,7 @@
                         <h2 class="footer-heading text-light">contacts</h2>
                     <ul class=" myContacts list-unstyled">
                         <li>
-                            <a href="tel:6019187211" class="footer-link text-light">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
+                            <a href="tel:6019187211" class="footer-link text-light">Call me</a>
                         </li>
                         <li>
                             <a href="mailto:clintjackson601@gmail.com"class="footer-link text-light">Email: clintjackson601@gmail.com</a>
