--- a/reading.html
+++ b/reading.html
@@ -110,7 +110,7 @@
             </div>
         </section>
         <section class="section" id="headerSection2">
-            <div class="contanier mb-5">
+            <div class="container mb-5">
                 <div class="row">
                     <div class="col-lg-4">
                         <a href="index.html" class="heading">CJpage</a>
@@ -197,7 +197,7 @@
                         <h2 class="footer-heading text-light">contacts</h2>
                     <ul class=" myContacts list-unstyled">
                         <li>
-                            <a href="tel:6019187211" class="footer-link text-light">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
+                            <a href="tel:6019187211" class="footer-link text-light">Call me</a>
                         </li>
                         <li>
                             <a href="mailto:clintjackson601@gmail.com"class="footer-link text-light">Email: clintjackson601@gmail.com</a>
