--- a/sports.html
+++ b/sports.html
@@ -110,7 +110,7 @@
             </div>
         </section>
         <section class="section" id="headerSection2">
-            <div class="contanier mb-5">
+            <div class="container mb-5">
                 <div class="row">
                     <div class="col-lg-4">
                         <a href="index.html" class="heading">CJpage</a>
@@ -158,7 +158,7 @@
     <main class="main" id="main">
         <section class="section" id="Section1">
             <div class="container">
-                <h2 class=" ab-text main-heading text-center">My Favorite Sports</h2>
+                <h2 class=" ab-text main-heading text-center mb-5">My Favorite Sports</h2>
                 <div class="row">
                     <div class="col-md-6">
                         <figure class="figure">
@@ -175,7 +175,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <figure class="figure">
-                                    <img src="images/pablo-rebolledo-h8sl-oNcat0-unsplash.jpg"alt="an image of two mma fighters fighting to came victory" class="img-fluid image w-100" />
+                                    <img src="images/pablo-rebolledo-h8sl-oNcat0-unsplash.jpg"alt="an image of two mma fighters fighting" class="img-fluid image w-100" />
                                     <figcaption class="figure-caption">MMA is mixed martial arts that allow a variety of fighting style where there is know debate about it been the superior combat sport</figcaption>
                                     </figure>
                                 </div>
@@ -188,7 +188,7 @@
                                 <div class="row">
                                         <div class="col-md-6">
                                             <figure class="figure">
-                                                <img src="images/courtney-cook-h7aVq-7FfPw-unsplash.jpg"alt="an image of a man in a  lime green shirt on a golf feld swinging gis golf club" class="img-fluid image w-100" />
+                                                <img src="images/courtney-cook-h7aVq-7FfPw-unsplash.jpg"alt="an image of a man in a lime green shirt on a golf feld swinging gis golf club" class="img-fluid image w-100" />
                                                 <figcaption class="figure-caption">Golf is a club and ball sport in which players use various clubs to hit a ball into a series of holes on a course in as few strokes as possible.</figcaption>
                                             </figure>
                                         </div>
@@ -223,7 +223,7 @@
                         <h2 class="footer-heading text-light">contacts</h2>
                     <ul class=" myContacts list-unstyled">
                         <li>
-                            <a href="tel:6019187211" class="footer-link text-light">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
+                            <a href="tel:6019187211" class="footer-link text-light">Call me</a>
                         </li>
                         <li>
                             <a href="mailto:clintjackson601@gmail.com"class="footer-link text-light">Email: clintjackson601@gmail.com</a>
